--- a/presentation/index.qmd
+++ b/presentation/index.qmd
@@ -6,6 +6,9 @@ title: Presentation
 
 ## [The 8th International Disaster and Risk Conference (IDRC 2025)](https://idrc2025.cyens.org.cy/)
 
+![IDRC 2025](IDRC25.png)
+
+
 **Date:** October 22-24, 2025\
 **Location:** CYENS Centre of Excellence, Nicosia, Cyprus\
 **Title:** Is Waste Blocking Our Cities? A Multisource Approach to Understanding Flood Disruption in Nairobi\
@@ -17,20 +20,23 @@ title: Presentation
 
 ## [Netmob 2025](https://netmob.org/www25/)
 
-![Netmob 2025]()
+![Netmob 2025](Netmob2025.png)
 
 **Date:** October 8-10, 2025\
 **Location:** Paris, France\
-**Title:** Unveiling Urban Travel Patterns: A Comparative Analysis of Smart Card and Mobile App Data\
-**Authors:**\
+**Main Conference Research Title:** Decomposing International Migration Flows with Mobile Trace Data: Trends, Seasonality, and Shocks\
+**Main Conference Research Authors:**Wenlan Zhang , Dr Douglas R. Leasure\
+**Data Challenge Title:** Integrating Temporal Context into User Profiling: A Preliminary Study with Doc2Vec\
+**Data Challenge Authors:**Wenlan Zhang, Adam(ZhengZi) Zhou, Andrew Renninger\
 **Acknowledgement:** This presentation was supported by Netmob 2025 student travel grant and Leverhulme Centre for Demographic Science (LCDS), University in Oxford.\
-[View Tutorial](https://github.com/OxfordDemSci/Mapineq/blob/214-add-code-to-api/docs/api_tutorial_jupyter_notebook/Mapineq_API.ipynb) \| [View](https://)
+[View Poster](https://www.canva.com/design/DAG0jmiuaMU/rVsV1izHsTdP1RbSfnynMA/view?utm_content=DAG0jmiuaMU&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hac0c14271c) \ | [View Abstract](https://netmob.org/www25/files/NetMob25_Book_of_Abstracts.pdf)
+
 
 ------------------------------------------------------------------------
 
 ## [City Plus 2025](https://www.city-plus.org/)
 
-![City+ 2025]()
+![City+ 2025](City+.png)
 
 **Date:** September 29-30, 2025\
 **Location:** Oxford, UK\
@@ -42,14 +48,14 @@ title: Presentation
 
 ## [11th International Conference on Computational Social Science (IC2S2 2025)](https://www.ic2s2-2025.org/)
 
-![IC2S2 2025]()
+![IC2S2 2025](IC2S22025.png)
 
 **Date:** July 21-24, 2025\
 **Location:** Norrköping, Sweden\
 **Title:** AI for Spatial Justice: Multimodal and Street View Imagery Uncover Waste Disparities in Nairobi’s Informal Settlements\
 **Authors:** Wenlan Zhang, Prof. Chen Zhong, Prof. Qunshan Zhao\
 **Acknowledgement:** This presentation was supported by UCL CASA student travel grant.\
-[View Poster](https://github.com/OxfordDemSci/Mapineq/blob/214-add-code-to-api/docs/api_tutorial_jupyter_notebook/Mapineq_API.ipynb) \| [Abstract](https://www.ic2s2-2025.org/program/#sessions-list)
+[View Poster](https://www.canva.com/design/DAGsHQL841o/zigFJsbtFMs5bKgv3uo84w/view?utm_content=DAGsHQL841o&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h2de3242ed8) \| [Abstract](https://www.ic2s2-2025.org/program/#sessions-list)
 
 ------------------------------------------------------------------------
 
